--- a/product-preview-card-component-main/css/style.css
+++ b/product-preview-card-component-main/css/style.css
@@ -21,16 +21,36 @@ main {
 
 .product-preview-card {
   background-color: var(--white);
-  border-radius: 10px;
+  border-radius: 15px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   width: 800px;
   height: 550px;
   margin: 0 auto;
-  padding: 20px;
-  margin: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.product-preview-card__image {
+  height: 100%;
+  width: 50%;
+  border-radius: 15px 0 0 15px;
+  overflow: hidden;
+}
+
+.product-preview-card__image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.product-preview-card__info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  width: 50%;
+  padding: 0 20px;
 }
 
 .product-preview-card__title {
