--- a/product-preview-card-component-main/css/style.css
+++ b/product-preview-card-component-main/css/style.css
@@ -53,6 +53,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  justify-content: center;
   height: 100%;
   width: 50%;
   padding: 45px 45px;
