--- a/product-preview-card-component-main/css/responsive.css
+++ b/product-preview-card-component-main/css/responsive.css
@@ -5,7 +5,7 @@
   }
 
   .product-preview-card__info {
-    padding: 35px 35px;
+    padding: 36px 36px;
   }
 
   .product-name {
@@ -41,7 +41,43 @@
     flex-direction: column;
   }
 
-    .product-preview-card__info {
-        width: 100%;
+  .product-preview-card__image {
+    width: 100%;
+    border-radius: 15px 15px 0 0;
+    object-fit: cover;
+  }
+
+  .product-preview-card__info {
+    padding: 25px 25px;
+    width: 100%;
+    height: 60%;
+  }
+
+    .product-name {
+        font-size: 12px;
+        margin-bottom: 12px;
     }
+
+    .product-preview-card__title {
+        font-size: 2.2rem;
+        line-height: 35px;
+        margin-bottom: 12px;
+    }
+
+    .product-preview-card__description {
+        font-size: 15px;
+        line-height: 24px;
+        margin-bottom: 12px;
+    }
+
+    .product-preview-card__price {
+        margin-bottom: 10px;
+    }
+
+    .attribution {
+        font-size: 12px;
+        bottom: 95px;
+    }
+
+
 }
